@@ -1,4 +1,5 @@
 ncmpc 0.38 - not yet released
+* add option "timedisplay-type=none" to hide current song time
 
 ncmpc 0.37 - (2020-01-24)
 * show performer on song page
